<resources>
    <string name="app_name">厨房屏_烧烤吧</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">设置</string>
    <string name="update">升级</string>

    <string name="order_detail">单品明细</string>

    <string name="closeprint">关闭</string>
    <string name="print_server">打印服务器</string>

    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="serverip">服务器IP</string>
    <string name="kitchen">厨房屏名</string>
    <string name="printstytle">打印机类型</string>
    <string name="printip">打印机IP</string>
    <string name="columnnum">列数</string>

    <string name="outtime">超时单品</string>
    <string name="allfood">全部单品</string>

    <string name="color1">超时1</string>
    <string name="color2">超时2</string>
    <string name="color3">超时3</string>
    <string name="color4">超时4</string>

    <string name="begintime">起始时间</string>
    <string name="endtime">结束时间</string>

</resources>
