<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:inputType="textUri"
            android:key="@string/serverip"
            android:summary="192.168.1.78"
            android:title="服务器IP(必填)">
        </EditTextPreference>
        <EditTextPreference
            android:inputType="text"
            android:key="@string/kitchen"
            android:summary="  "
            android:title="厨房屏计算机名(必填)">
        </EditTextPreference>
        <ListPreference
            android:key="@string/columnnum"
            android:title="显示列数"
            android:entries="@array/list_colums"
            android:entryValues="@array/list_colums"
            android:dialogTitle="请选择列数">
        </ListPreference>
       <Preference
           android:key="et_version"
           android:title="版本更新"></Preference>
</PreferenceScreen>